poke/testsuite/poke.pkl/printf-diag-10.pk
/* { dg-do compile } */

printf "xxx%i32cxxx", 10L; /* { dg-error "" } */
